Add devtools infrastructure

--- a/.env.sample.yaml
+++ b/.env.sample.yaml
@@ -1,3 +1,7 @@
+host:
+  internal: example.com
 duckdns:
   token: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
   domain: mydomain.duckdns.org
+drone:
+  secret: randomly-generated-secret-here
