Add harbor to devtools infrastructure

--- a/.env.sample.yaml
+++ b/.env.sample.yaml
@@ -5,3 +5,5 @@ duckdns:
   domain: mydomain.duckdns.org
 drone:
   secret: randomly-generated-secret-here
+harbor:
+  secret: another-randomly-generated-secret-here
